1) GUI radio buttons cut off image fixed 2) //@author A0111855J 3) Edited \t\t method to display hour tasks properly (10am, 11am, 12am not showing correctly)

--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -207,12 +207,14 @@
 
 .radio-button .radio { 
 	-fx-opacity: 0.2;
+	-fx-padding: 6;
 }
 
 .radio-button:selected .radio { 
     -fx-background-image: url('file:images/selected-sml.png');
     -fx-background-color: transparent;
     -fx-opacity: 1;
+	-fx-background-position: 0 0;
 }
 
 .radio-button:selected {
